4. Fix clicking on CustomBrowse items.
5. If 'SB Player' is running on current Android device, then disable
   notification and lock screen controls. The code to make these persistent
   interferes with local playback.
6. Add a note to 'save defaults' dialog stating that 'Applicaiton layout' is
   not saved as a default.
7. Add custom add/remove favourite icons.

0.3.6
-----
1. Fix pinned apps.
2. Reduce list image size to 50px, as this matches what is requested from
   server.
3. Allow 'Scroll to current' to work even if player is off.
4. Check all command params for "album_id" when determining if can add a 'Play
   album starting at track' action.

0.3.5
-----
1. Fix clicking on server-supplied categories.

0.3.4
-----
 1. Fix sub-toolbar actions when showing album track list navigated into via a
    'More' menu, and add 'Play album starting at track' to tracks.
 2. Better 'Play album starting at track' handling.
 3. Remove 'SoundCloud' work-around, breaks others!
 4. Check any current track in queue for meta-data changes, not just those with
    a zero duration - as this is not a reliable way to detect a stream.
 5. Detect duration change of current item in queue.
 6. Centre info images in desktop view when showing 3 panes.
 7. Show sync icon in toolbar, even if player is off.
 8. Properly control when to show album rating button.
 9. Add play actions to more entries in 'More' menu.
10. Don't add 'More' entry to year in a 'More' entry.
11. Allow more space for alarm entries.
12. Larger covers in lists.

0.3.3
-----
 1. Fix buttons staying in 'hover' state with touch devices.
 2. Only show 'Start player' settings if on android.
 3. When using ["<app>", "playlist", "add/insert/play", "menu:<app>",...] and
    have a favorites_url, then replace with ["playlist, "add/insert/play",
    "favorites_url"]. Fixes SoundCloud.
 4. Allow multiple favourites and playlists to be removed/deleted.
 5. When used on a mobile device, clicking on 'browse' bottom navigation button